[package]
name = "is_close"
version = "0.1.2"
authors = ["0b11001111"]
edition = "2018"
description = "Determine whether floating point numbers are close in value"
readme = "README.md"
repository = "https://github.com/PM4Rs/is_close"
license = "MIT OR Apache-2.0"
keywords = ["testing", "float", "comparison"]

[dependencies]
num-traits = "0.2"
